@@ -460,6 +460,35 @@ end
     assert_equal ['A working computer'], @a0_0_1.requirements
   end
 
+  def test_spaceship_name
+    s1 = quick_gem 'a', '1'
+    s2 = quick_gem 'b', '1'
+
+    assert_equal -1, (s1 <=> s2)
+    assert_equal  0, (s1 <=> s1)
+    assert_equal  1, (s2 <=> s1)
+  end
+
+  def test_spaceship_platform
+    s1 = quick_gem 'a', '1'
+    s2 = quick_gem 'a', '1' do |s|
+      s.platform = Gem::Platform.new 'x86-my_platform1'
+    end
+
+    assert_equal -1, (s1 <=> s2)
+    assert_equal  0, (s1 <=> s1)
+    assert_equal  1, (s2 <=> s1)
+  end
+
+  def test_spaceship_version
+    s1 = quick_gem 'a', '1'
+    s2 = quick_gem 'a', '2'
+
+    assert_equal -1, (s1 <=> s2)
+    assert_equal  0, (s1 <=> s1)
+    assert_equal  1, (s2 <=> s1)
+  end
+
   def test_summary
     assert_equal 'this is a summary', @a0_0_1.summary
   end
